Fix #422 cache map preview on disk

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ irc.host=irc.faforever.com
 irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
-lobby.host=test.faforever.com
+lobby.host=faforever.com
 lobby.port=8001
 
 update.host=faforever.com
@@ -30,8 +30,7 @@ upnp.timeout=1500
 connectivity.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
 vault.mapDownloadUrl=http://content.faforever.com/faf/vault/maps/%s.zip
-vault.mapPreviewUrl.small=http://content.faforever.com/faf/vault/map_previews/small/%s.png
-vault.mapPreviewUrl.large=http://content.faforever.com/faf/vault/map_previews/large/%s.png
+vault.mapPreviewUrlFormat=http://content.faforever.com/faf/vault/map_previews/%s/%s.png
 vault.replayDownloadUrl=http://content.faforever.com/faf/vault/replay_vault/replay.php?id=%d
 vault.modRoot=http://content.faforever.com/faf/vault/mods/
 
