#410 git updater, works for base featured mods but not yet for combinations (e.g. coop & faf)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,8 @@ turn.host=faforever.com
 turn.port=3478
 stun.host=faforever.com
 
-turn.refreshInterval=20000
-connectivityCheck.timeout=60000
-
 newsFeedUrl=http://www.faforever.com/news/feed
 
-upnp.timeout=1500
 connectivity.helpUrl=http://wiki.faforever.com/index.php?title=Connection_issues_and_solutions
 
 vault.mapDownloadUrl=http://content.faforever.com/faf/vault/maps/%s.zip
@@ -36,6 +32,7 @@ vault.modRoot=http://content.faforever.com/faf/vault/mods/
 
 playerInfo.nameHistoryUrl=http://app.faforever.com/faf/userName.php?displayName=%s
 
+fafExe.url=http://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
 fafReplayServer.host=lobby.faforever.com
 fafReplayServer.port=15000
 localReplayServer.port=15000
@@ -58,8 +55,6 @@ rating.good=1500
 rating.high=2000
 rating.top=2500
 
-parse.appId=QcaF9AMuraxOoWKf7O4riZEzKuCJIpM2wl1lOjDW
-parse.apiId=1qmZVKeIq1fbMtu9F8YSXyevmVQKzl0ccjCzwHVx
 api.baseUrl=https://api.test.faforever.com
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
