Fix #410 smarter auto updater

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ rating.good=1500
 rating.high=2000
 rating.top=2500
 
-api.baseUrl=https://api.test.faforever.com
+api.baseUrl=https://api.faforever.com
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
