Implements German and Language selection as well as TimeFormate selection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ irc.host=irc.faforever.com
 irc.port=8167
 irc.defaultChannel=#aeolus
 irc.reconnectDelay=5000
-lobby.host=test.faforever.com
+lobby.host=faforever.com
 lobby.port=8001
 
 update.host=faforever.com
@@ -55,7 +55,7 @@ rating.good=1500
 rating.high=2000
 rating.top=2500
 
-api.baseUrl=https://api.test.faforever.com
+api.baseUrl=https://api.faforever.com
 oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
