--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,3 +63,4 @@ oauth.redirectUris=http://localhost
 oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
 oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
 unitDatabase.url=http://spooky.github.io/unitdb/#/
+clanWebsite.url=http://clans.faforever.com/
