--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ propdepsVersion=0.0.7
 springBootVersion=1.4.4.RELEASE
 lombokVersion=1.16.12
 mockitoVersion=2.7.0
-fafCommonsVersion=76fb583d146082f3db68c0bece38a3ee28ead8e6
+fafCommonsVersion=f82965262527e732102ecfa3023c326b66b0802b
 jacksonDatatypeJsr310Version=2.8.6
+qBuildersVersion=1.5
