--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,7 +12,7 @@ faf-client:
       host: localhost
 
   vault:
-    base-url: http://localhost
+    base-url: http://content.faforever.com
 
   news:
     feed-url: http://direct.faforever.com/news/feed
@@ -23,8 +23,8 @@ faf-client:
   api:
     base-url: http://localhost:8010
     access-token-uri: ${faf-client.api.base-url}/oauth/token
-    client-id: faf-client
-    client-secret: banana
+    client-id: 3bc8282c-7730-11e5-8bcf-feff819cdc9f
+    client-secret: 6035bd78-7730-11e5-8bcf-feff819cdc9f
 
   forged-alliance:
     exe-url: http://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
