--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,5 +61,5 @@ oauth.redirectUris=http://localhost
 oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
 oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
 unitDatabase.url=http://spooky.github.io/unitdb/#/
-login.create.accountUrl=https://www.faforever.com/account/register
-login.forgot.loginUrl=http://app.faforever.com/faf/forgotPass.php
+login.createAccountUrl=https://www.faforever.com/account/register
+login.forgotLoginUrl=http://app.faforever.com/faf/forgotPass.php
