--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,6 @@
-rootProject.name=downlords-faf-client
-profile=dev
 faf_ice_adapter_version=2.2.2
 faf_uid_version=0.1.0
-
-## The Gradle daemon aims to improve the startup and execution time of Gradle.
-## When set to true the Gradle daemon is to run the build.
-## TODO: disable daemon on CI, since builds should be clean and reliable on servers
-## un comment the below line to enable the daemon
-org.gradle.daemon=true
-
-## Specifies the JVM arguments used for the daemon process.
-## The setting is particularly useful for tweaking memory settings.
-## Default value: -Xmx1024m -XX:MaxPermSize=256m
-## un comment the below line to override the daemon defaults
-#org.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+propdepsVersion=0.0.7
+springBootVersion=1.4.4.RELEASE
+lombokVersion=1.16.12
+mockitoVersion=2.7.0
