--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,6 @@ oauth.loginUri=${api.baseUrl}/login
 oauth.authUri=${api.baseUrl}/oauth/authorize
 oauth.tokenUri=${api.baseUrl}/oauth/token
 oauth.redirectUris=http://localhost
-oauth.clientId=3bc8282c-7730-11e5-8bcf-feff819cdc9f
-oauth.clientSecret=6035bd78-7730-11e5-8bcf-feff819cdc9f
+oauth.clientId=
+oauth.clientSecret=
 unitDatabase.url=http://spooky.github.io/unitdb/#/
