--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ apply plugin: 'distribution'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '0.7.6-alpha'
+version = '0.7.7.2-alpha'
 
 compileJava.dependsOn(processResources)
 processResources {
@@ -295,6 +295,7 @@ dependencies {
   compile("com.github.rutledgepaulv:q-builders:${qBuildersVersion}")
   compile("com.github.nsp:JSkills:${jSkillsVersion}")
   compile("com.github.jasminb:jsonapi-converter:${jsonapiConverterVersion}")
+  compile("org.opentelecoms.ice:ice4j-fork:1.0+f.4")
   compile("com.github.Brutus5000:BiReUS-JCL:${bireusVersion}")
   compile("com.github.micheljung:i4jruntime:${i4jruntimeVersion}")
 
