--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,12 @@
 # Auto detect text files and perform LF normalization
 * text=auto eol=lf
-
 *.dll                   binary
 *.ttf                   binary
-*.png                   binary
 *.jpg                   binary
 *.mp3                   binary
 *.zip                   binary
 *.exe                   binary
 src/main/native/uid     binary
+
+*.png filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
