--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 .idea/sonarIssues.xml
 
 # Sensitive or high-churn files:
+.idea/dataSources
 .idea/dataSources.ids
 .idea/dataSources.xml
 .idea/sqlDataSources.xml
