Switch to new API URL, hackfix new IRC behavior
Fixes #604

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -24,7 +24,7 @@ faf-client:
     base-url: https://www.faforever.com
 
   api:
-    base-url: https://api.dev.faforever.com
+    base-url: https://api.faforever.com
     client-id: 3bc8282c-7730-11e5-8bcf-feff819cdc9f
     client-secret: 6035bd78-7730-11e5-8bcf-feff819cdc9f
 
