Explicitly hide splash screen
Fixes #640

--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,7 @@ distributions {
             downloadWindowsUid.outputs.files
         ]
       }
+      exclude('**/i4jruntime*.jar')
     }
   }
 }
@@ -295,6 +296,7 @@ dependencies {
   compile("com.github.nsp:JSkills:${jSkillsVersion}")
   compile("com.github.jasminb:jsonapi-converter:${jsonapiConverterVersion}")
   compile("com.github.Brutus5000:BiReUS-JCL:${bireusVersion}")
+  compile("com.github.micheljung:i4jruntime:${i4jruntimeVersion}")
 
   testCompile 'junit:junit:4.11'
   testCompile("org.testfx:testfx-core:4.0.+") {
