--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ faf-client:
 
   unit-database:
     spookiesUrl: http://spooky.github.io/unitdb/#/
-    rackOversUrl: http://90.103.145.211/index.php?settings64=eyJwcmV2aWV3Q29ybmVyIjoiTm9uZSJ9
+    rackOversUrl: http://rk.sytes.net/scfa-unit-db/index.php?settings64=%s
 
 spring:
   profiles:
