Fix mod download
Make some adjustments to get mod downloading work
Fixes #717

--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ hs_err_pid*
 
 ### Gradle template
 .gradle
-build/
+/build
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -48,3 +48,6 @@ gradle-app.setting
 
 # Included binaries
 !src/main/native/*
+
+#intelij build
+/out
