--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ jSkillsVersion=8b333ec63d
 jsonapiConverterVersion=0b3b2466c8801f8f79d1034d780203fc37049054
 bireusVersion=1c2984230357955457e52bd39ca56c5a18977295
 i4jruntimeVersion=154e80468fbaa4912107591729df1f9afdfa48c4
+sentryVersion=1.7.2
