Include linux ICE adapter in distribution

--- a/build.gradle
+++ b/build.gradle
@@ -156,6 +156,7 @@ distributions {
             file('src/main/native'),
             jar,
             unpackIceAdapter.outputs.files,
+            downloadIceAdapterLinux.outputs.files,
             downloadUnixUid.outputs.files,
             downloadWindowsUid.outputs.files
         ]
