--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ def buildAssetList() {
   return file("build/install4j").list(new FilenameFilter() {
     @Override
     boolean accept(File dir, String name) {
-      return name =~ /\.exe/
+      return name =~ /\.(exe|zip|tar\.gz|rpm|deb)/
     }
   }).collect({ file -> "build/install4j/${file}" })
 }
@@ -153,7 +153,6 @@ distributions {
       from {
         [
             configurations.runtime,
-            file('src/main/native'),
             jar,
             unpackIceAdapter.outputs.files,
             downloadIceAdapterLinux.outputs.files,
@@ -172,8 +171,9 @@ install4j {
   }
 }
 
-task buildInstaller(type: Install4jTask) {
-  description 'Creates the application installer using Install4j'
+task buildInstall4jMediaFiles(type: Install4jTask) {
+  group "distribution"
+  description 'Creates install4j media files'
   dependsOn 'clean'
   dependsOn 'jar'
   dependsOn 'installDist'
@@ -189,8 +189,9 @@ task buildInstaller(type: Install4jTask) {
 }
 
 task githubRelease(type: ReleaseTask, overwrite: true) {
+  group "distribution"
   description 'Creates a new release on Github and closes the according milestone'
-  dependsOn 'buildInstaller'
+  dependsOn 'buildInstall4jMediaFiles'
 
   doFirst {
     project.github {
@@ -207,12 +208,14 @@ task githubRelease(type: ReleaseTask, overwrite: true) {
 }
 
 task downloadIceAdapter(type: Download) {
+  group "native dependencies"
   src "https://github.com/FAForever/ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter-win32.zip"
   dest file("${buildDir}/tmp/faf-ice-adapter.zip")
   onlyIfNewer true
 }
 
 task downloadIceAdapterLinux(type: Download) {
+  group "native dependencies"
   src "https://github.com/FAForever/ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter"
   dest file("${buildDir}/resources/native/faf-ice-adapter")
   onlyIfNewer true
@@ -224,17 +227,17 @@ task unpackIceAdapter(type: Copy, dependsOn: downloadIceAdapter) {
   into file("${buildDir}/resources/native")
 }
 
-task downloadUnixUid(type: Download, dependsOn: unpackIceAdapter) {
+task downloadUnixUid(type: Download) {
   group "native dependencies"
   src "https://github.com/FAForever/uid/releases/download/v${faf_uid_version}/faf-uid"
-  dest file("${buildDir}/resources/native")
+  dest file("${buildDir}/resources/native/faf-uid")
   onlyIfNewer true
 }
 
-task downloadWindowsUid(type: Download, dependsOn: unpackIceAdapter) {
+task downloadWindowsUid(type: Download) {
   group "native dependencies"
   src "https://github.com/FAForever/uid/releases/download/v${faf_uid_version}/faf-uid.exe"
-  dest file("${buildDir}/resources/native")
+  dest file("${buildDir}/resources/native/faf-uid.exe")
   onlyIfNewer true
 }
 
@@ -243,7 +246,7 @@ task downloadNativeDependencies(dependsOn: [unpackIceAdapter, downloadUnixUid, d
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.5'
+  gradleVersion = '4.5.1'
 }
 
 task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
