--- a/build.gradle
+++ b/build.gradle
@@ -318,7 +318,8 @@ dependencies {
   compile("com.github.nsp:JSkills:${jSkillsVersion}")
   compile("com.github.jasminb:jsonapi-converter:${jsonapiConverterVersion}")
   compile("com.github.Brutus5000:BiReUS-JCL:${bireusVersion}")
-  compile("com.jfoenix:jfoenix:${jfoenixVersion}")
+//  compile("com.jfoenix:jfoenix:${jfoenixVersion}")
+  compile("com.github.micheljung:JFoenix:6d00b59ca5327ca2754c63c94285b92a3badf7c5")
   compile 'org.javassist:javassist:3.20.0-GA'
   provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
 
