--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,5 @@
 *.mp3                   binary
 *.zip                   binary
 *.exe                   binary
-src/main/native/uid     binary
-
-*.png filter=lfs diff=lfs merge=lfs -text
-*.psd filter=lfs diff=lfs merge=lfs -text
+*.png                   binary
+*.psd                   binary
