--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 .idea/dataSources
 .idea/dataSources.ids
 .idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/discord.xml
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
