--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ apply plugin: 'distribution'
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-version = '0.9.0-beta'
+version = '0.9.0-beta-rc.1'
 
 compileJava.dependsOn(processResources)
 processResources {
@@ -139,8 +139,7 @@ configurations {
 
 jar {
   manifest {
-    attributes "Premain-Class": "com.faforever.client.fx.TransparentWebViewPatch",
-        "Main-Class": "com.faforever.client.FafClientApplication",
+    attributes "Main-Class": "com.faforever.client.FafClientApplication",
         "Implementation-Title": "Downlord's FAF Client",
         "Implementation-Version": version,
         "Implementation-Vendor": "Downlord"
@@ -310,8 +309,7 @@ dependencies {
   compile("com.github.Brutus5000:BiReUS-JCL:${bireusVersion}")
 //  compile("com.jfoenix:jfoenix:${jfoenixVersion}")
 
-  // Not actually a dependency, but make sure it's built.
-  compileOnly project(":webview-patch")
+  compile project(":webview-patch")
 
   compile("com.github.micheljung:JFoenix:6d00b59ca5327ca2754c63c94285b92a3badf7c5")
   provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
